Tell a set from its complement, and fold case the way FIND does
Six rules of the bitset arm, each read from the one line of C that carries it.

Equality ignored the complement flag, so a set equalled its own complement.
CT_Bitset compares BITS_NOT first and the bytes second; comparing only the
bytes made `b = complement b` true, which Rebol's own suite asks four ways
over and expects false from all four.

FIND folds case and PICK does not. The C spells out all three conditions at
once -- IS_CHAR(arg) && action == A_FIND && !D_REF(ARG_FIND_CASE) -- so a
char matches either case unless /case was given, a number naming the same
code point never does, and PICK never does either. Check_Bit tries the lower
case, then the upper, and only then turns the answer round for a complemented
set.

MAKE from another bitset copies it. POKE takes the same block grammar MAKE
does, so `poke bs [32 - 40] none` clears the run. PICKZ answers what PICK
answers, because a bitset already counts from nought. And a value that names
no bits at all is refused for its type rather than its value: Set_Bits and
Check_Bits both end at Trap_Type, so `pick b true` and `insert bs 1.5` are
invalid-type.

COPY loses the complement, which reads as a mistake and is what REBOL does.
The copy arm is one line and a fresh series carries no flag, where COMPLEMENT
two arms above sets it by hand. So a copied complemented set answers the
opposite of every question the original answers. Recorded as finding 23.

Three JEBOL tests had asserted JEBOL's answer rather than Rebol's and are
corrected: two expected invalid-arg where a real 3.22.1 says invalid-type,
and one expected a lowercase range to reject #"A", which FIND accepts.

Eleven suite assertions come off known-gaps.txt: 1,649 to 1,638, leaving two
in bitset-test.r3.